--- a/package.json
+++ b/package.json
@@ -18,19 +18,33 @@
     "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "iron-session": "^6.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.2.0",
     "next": "13.1.1",
+    "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
-    "typescript": "4.9.4"
+    "swr": "^2.1.3",
+    "typescript": "^4.9.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/validator": "^13.7.14",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
