--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading": "^2.0.3",
     "react-material-ui-carousel": "^3.4.2",
     "swr": "^2.1.3",
     "typescript": "^4.9.4",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
