--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^5.2.0",
     "next": "13.1.1",
     "next-iron-session": "^4.2.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
